# KaggleISIC

./: .gitignore  kaggle_competition.ipynb  readme.md  setup.cfg  setup.py
notebooks/: 0.0_eda_full.ipynb  01_eda_full.ipynb  augmented_bench_kaggle.ipynb  benchmark_kaggle.ipynb  eda_and_testing.ipynb  mlp_colab.ipynb  mlp_kaggle.ipynb
notebooks/benchmark/: bench_aug_hdf5_kaggle.ipynb  bench_aug_multi_kaggle.ipynb  bench_hdf5_kaggle.ipynb  bench_meta_kaggle.ipynb  bench_multi_kaggle.ipynb
notebooks/convnext/: convnext_hdf5_kaggle.ipynb
notebooks/outdated/: augmented_bench_kaggle.ipynb  benchmark_kaggle.ipynb  cnn_kaggle.ipynb  mlp_kaggle.ipynb
notebooks/resnet/: resnet_custom_aug_hdf5_kaggle.ipynb  resnet_custom_hdf5_kaggle.ipynb  resnet_simp_aug_hdf5_kaggle.ipynb  resnet_simp_hdf5_kaggle.ipynb
notebooks/tabular/: xgb_lgbm_kaggle.ipynb
notebooks/transformers/: vit_base_isic_patch_32_kaggle.ipynb
notebooks/vae/: vae_kaggle.ipynb
reports/: Report.tex
src/kaggleisic/: config.py  data_augmentation.py  dataloader.py  isic_class.py  load_data.py  models.py  train_valid_eval.py  train_valid_eval_roc.py
src/models/: resnet50.py
src/utils/: combinator.py  combinator_confidence.py  load_more_images.ipynb  loading_more_images.py
