[metadata]
name = kaggleisic
version = 0.1.0
description = ISIC Skin Cancer Analysis Package
author = Eduard Ferré Sánchez
author_email = eduardferresanchez@gmail.com
url = https://github.com/eduardferre/kaggleisic

[options]
packages = find:
package_dir = src
install_requires =
    numpy
    pandas
    matplotlib
    seaborn
    torchvision
python_requires = >=3.8

[options.packages.find]
where = src
exclude = tests